# qgis-insar-timeseries-viewer

./: .editorconfig  .gitignore  .qgis-plugin-ci  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: DEVELOPMENT_WORKFLOW.md  MIGRATION_FROM_V1_0_1.md  OPEN_SOURCE_AUDIT.md  PLOT_VISUAL_SPEC.md  PUBLISHING.md  RELEASE_1_1_0.md  SYNTHETIC_DATA_SPEC.md
insar_timeseries_viewer/: CHANGELOG.md  DATA_REQUIREMENTS.md  INSTALLATION.md  README.md  TECHNICAL_REFERENCE.md  TROUBLESHOOTING.md  USER_GUIDE.md  VALIDATION_CHECKLIST.md  __init__.py  additional_properties.py  dock_widget.py  field_mapping_dialog.py  graph_export.py  i18n.py  index-en.html  index-pt_BR.html  insar_timeseries_reader.py  layer_mapping_store.py  layer_report.py  layer_schema_service.py  metadata.txt  orbit_direction.py  performance.py  plot_component_styles.py  plot_controller.py  plot_presets.py  plot_settings.py  plugin.py  polygon_means.py  polygon_name_fields.py  spatial_selection.py  timeseries_csv_export.py  timeseries_statistics.py
scripts/: build_release.sh  generate_synthetic_fixtures.py  install_git_hooks.sh  package_plugin.py  run_all_checks.sh  run_quality_checks.sh  validate_release.py
tests/fixtures/: synthetic_los_points.geojson
tests/qgis/: test_current_reader_synthetic_fixtures.py  test_field_mapping_dialog_qgis.py  test_layer_mapping_store_qgis.py  test_reader_qgis.py  (+2 more)
(+29 files in other folders)
