[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qgis-insar-timeseries-viewer"
version = "1.0.0"
description = "Development tooling for the InSAR Time Series Viewer QGIS plugin"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-2.0-or-later" }
authors = [{ name = "Vinicius Mendes", email = "vmendes@vmendes.xyz" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: GIS",
]

[project.optional-dependencies]
dev = [
  "numpy>=1.26,<3",
  "pyshp>=2.3,<3",
  "pytest>=8",
  "ruff>=0.8",
  "bandit>=1.9,<2",
  "detect-secrets>=1.5,<2",
  "flake8>=7,<8",
  "qgis-plugin-ci>=2.8",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "qgis: requires a QGIS Python environment",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["dist", "build"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E501"]

[tool.setuptools]
packages = ["insar_timeseries_viewer"]
include-package-data = true

[tool.setuptools.package-data]
insar_timeseries_viewer = ["*.txt", "*.md", "*.html", "*.png", "LICENSE"]
